--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/uuid": "^9.0.7",
     "linq": "^4.0.2",
     "module_gm": "^5.0.5",
-    "pure-uuid": "^1.8.1"
+    "pure-uuid": "^1.8.1",
+    "robust-predicates": "^3.0.2"
   }
 }
