--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "linq": "^4.0.2",
     "module_gm": "^5.0.5",
     "pure-uuid": "^1.8.1",
-    "robust-predicates": "^3.0.2"
+    "robust-predicates": "^3.0.2",
+    "seedrandom": "^3.0.5"
+  },
+  "devDependencies": {
+    "@types/seedrandom": "^3.0.8"
   }
 }
