feat: turn off single player

--- a/Config/GameSetting.ini
+++ b/Config/GameSetting.ini
@@ -11,7 +11,7 @@ PlayerOfCampNum_1=1
 autoReconnectTime=10
 matchReconnectTime=60
 bUseTemplatJoystick=False
-bLSMode=True
+bLSMode=False
 bUseAutonomousProxyAuthority=True
 PlayerStyle=
 
