feat:提交小游戏

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "linq": "^4.0.2",
     "module_bubble": "^5.0.7",
     "module_gm": "^5.0.5",
+    "mwaction": "^1.0.8",
     "pure-uuid": "^1.8.1",
     "robust-predicates": "^3.0.2",
     "seedrandom": "^3.0.5"
