--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"module": "ES2022",
 		"sourceMap": true,
 		"typeRoots": [
-			"../../../../../../WindowsNoEditor/MW/Content/Typing"
+			"../../../../../../../WindowsNoEditor/MW/Content/Typing"
 		],
 		"lib": [
 			"ES2021"
