feat: add debug console

--- a/pet-simulator/package.json
+++ b/pet-simulator/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "debug_console": "^0.1.2",
     "module_bubble": "^5.1.1",
     "module_gm": "^5.0.3",
     "module_leaderboard": "^4.0.10",
-    "odin": "^5.0.5",
-    "mwaction": "^1.0.8"
+    "mwaction": "^1.0.8",
+    "odin": "^5.0.5"
   }
 }
