--- a/battleworld/package.json
+++ b/battleworld/package.json
@@ -16,6 +16,7 @@
     "module_buff": "^5.0.3",
     "module_gm": "^5.0.4",
     "module_guide": "^5.0.8",
-    "odin": "^5.0.5"
+    "odin": "^5.0.5",
+    "mwaction": "^1.0.8"
   }
 }
