--- a/pet-simulator/package.json
+++ b/pet-simulator/package.json
@@ -5,6 +5,9 @@
     "module_gm": "^5.0.3",
     "module_leaderboard": "^4.0.10",
     "mwaction": "^1.0.8",
-    "odin": "^5.0.5"
+    "odin": "^5.0.5",
+    "@types/crypto-js": "^4.2.1",
+    "crypto-js": "^4.2.0",
+    "linq": "^4.0.2"
   }
 }
