--- a/.gitignore
+++ b/.gitignore
@@ -2,25 +2,31 @@
 ### https://github.com/LviatYi/MetaWorldNPT
 
 # Idea
-.idea/**/*
-!.idea/runConfigurations
-!.idea/runConfigurations/**/*
+**/.idea/**/*
+!**/.idea/runConfigurations
+!**/.idea/runConfigurations/**/*
 
 # VS Code
-.vscode/**/*
-!.vscode/launcher.json
+**/.vscode/**/*
+!**/.vscode/launcher.json
 
 # TypeScript
 **/node_modules/**/*
 **/dist/**/*
-package-lock.json
-tsconfig.tsbuildinfo
+**/package-lock.json
+**/tsconfig.tsbuildinfo
 
 # Log
-TsBuilder.log
+**/TsBuilder.log
 
 # Meta world
 **/.mw/**/*
+## UNDETERMINED LviatYi 强烈建议您忽略 .project 文件
+## 此文件拥有一个非哈希的 Guid 算法和一系列吊诡的刷新时机 这将阻止正常的合并行为
+## 忽略它的副作用是，新拉取的工程并未包含 .project 文件，导致无法正常打开工程
+## 因此建议将 .project 文件加入备份
+**/.project
+!**/backup-project/.project
 **/DBCache/**/*
 **/AutoBackup/**/*
 **/Pictures/**/*
@@ -34,9 +40,6 @@ TsBuilder.log
 NAVDATA.bin
 #       Prefab 编辑时临时文件
 **/Prefabs/EditingTemplate.cfg
-# Meta world Project
-**/Project/ExternalData/BuildSetting
-**/Project/ExternalData/Levels
 ## UNDETERMINED LviatYi 强烈建议您对 ui-generate 文件采取以下策略（二选一）
 ## - 修改 uig 的生成模板，去除 ${Date} 与 ${Author} 等鸡肋字段 且 不要让 git 跟踪 ui-generate 的 meta 文件.
 ## - 不要让 git 跟踪 ui-generate 的文件.
