--- a/dragon-verse/backup-project/.project
+++ b/dragon-verse/backup-project/.project
@@ -1,1 +1,1 @@
-﻿{"ProjectGuid":"0B032D41457871944D6C8E82CD986793","ProjectName":"dragon-verse","FileVersion":"1.3.0","EditorVersion":"v0.28.0.0","EngineVersion":"0.16.0","DefaultLevel":"NewLevel","LastAccessTime":"2024.01.16-11.11.33"}
+﻿{"ProjectGuid":"B25D216645A188F4186BB2B4ADF55C8B","ProjectName":"dragon-verse","FileVersion":"1.3.0","EditorVersion":"v0.29.0.6","EngineVersion":"0.16.0","DefaultLevel":"NewLevel"}
