feat: update BEH
use better rotate interface

--- a/hauntedparadise/Config/GameSetting.ini
+++ b/hauntedparadise/Config/GameSetting.ini
@@ -24,8 +24,13 @@ SelectedIndex=0
 bHorizontalScreen=True
 
 [EditorVersion]
-Version=v0.30.0.0
+Version=v0.30.0.3
 
 [CharacterEditorSetting]
 bShowCancel233RoleWindow=False
+
+[Transform]
+Num_Translate=1
+Num_Rotate=5
+Num_Scale=0.062500
 
