--- a/hauntedparadise/package.json
+++ b/hauntedparadise/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "debug_console": "^0.1.3",
-    "module_gm": "^5.0.4"
+    "module_gm": "^5.0.4",
+    "pure-uuid": "^1.8.1"
   }
 }
