--- a/hauntedparadise/package.json
+++ b/hauntedparadise/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "debug_console": "^0.1.3",
     "module_gm": "^5.0.4",
+    "mwaction": "^1.0.8",
     "pure-uuid": "^1.8.1"
   }
 }
