style: update EditorConfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -200,7 +200,7 @@ ij_typescript_class_brace_style = end_of_line
 ij_typescript_comma_on_new_line = false
 ij_typescript_do_while_brace_force = never
 ij_typescript_else_on_new_line = false
-ij_typescript_enforce_trailing_comma = keep
+ij_typescript_enforce_trailing_comma = whenmultiline
 ij_typescript_enum_constants_wrap = on_every_item
 ij_typescript_extends_keyword_wrap = off
 ij_typescript_extends_list_wrap = off
@@ -226,7 +226,7 @@ ij_typescript_indent_chained_calls = true
 ij_typescript_indent_package_children = 0
 ij_typescript_jsdoc_include_types = true
 ij_typescript_jsx_attribute_value = braces
-ij_typescript_keep_blank_lines_in_code = 2
+ij_typescript_keep_blank_lines_in_code = 1
 ij_typescript_keep_first_column_comment = true
 ij_typescript_keep_indents_on_empty_lines = false
 ij_typescript_keep_line_breaks = true
