feat: add changeRankScore function

--- a/battleworld/Config/GameSetting.ini
+++ b/battleworld/Config/GameSetting.ini
@@ -23,11 +23,16 @@ SelectedIndex=0
 bHorizontalScreen=True
 
 [EditorVersion]
-Version=v0.31.0.3
+Version=v0.32.0.3
 
 [GraphicsSetting]
 EditorGPULevel=9
 EditorCPULevel=9
 MobileGPULevel=9
 MobileCPULevel=9
+
+[Transform]
+Num_Translate=1
+Num_Rotate=5
+Num_Scale=0.062500
 
