feat: update new AM interface

--- a/distributor-config.toml
+++ b/distributor-config.toml
@@ -4,8 +4,12 @@ to = ["./pet-simulator/JavaScripts/util/GToolkit.ts", "./battleworld/JavaScripts
 
 [[items]]
 from = "./dragon-verse/JavaScripts/util/README.md"
-to = ["./pet-simulator/JavaScripts/util/README.md","./battleworld/JavaScripts/util/README.md"]
+to = ["./pet-simulator/JavaScripts/util/README.md", "./battleworld/JavaScripts/util/README.md"]
 
 [[items]]
 from = "./dragon-verse/JavaScripts/controller/key-operation-manager"
 to = ["./pet-simulator/JavaScripts/controller/key-operation-manager", "./battleworld/JavaScripts/controller/key-operation-manager"]
+
+[[items]]
+from = '.\dragon-verse\JavaScripts\module\auth\AuthModule.ts'
+to = ['.\pet-simulator\JavaScripts\modules\auth\AuthModule.ts', '.\battleworld\JavaScripts\module\auth\AuthModule.ts']
