--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -50,5 +50,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./DragonVerse.zip
-          asset_name: ./DragonVerse.zip
+          asset_name: DragonVerse.zip
           asset_content_type: application/zip
