--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           name: DragonVerseZip
           path: DragonVerse.zip
+          retention-days: 3
 
       - name: Create Release
         id: create_release
