--- a/dragon-verse/package.json
+++ b/dragon-verse/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
-    "@types/node": "^20.4.8",
     "@types/crypto-js": "^4.2.1",
+    "@types/node": "^20.4.8",
     "@types/uuid": "^9.0.7",
     "crypto-js": "^4.2.0",
     "linq": "^4.0.3",
     "module_bubble": "^5.0.7",
     "module_gm": "^5.0.5",
+    "mw-god-mod": "^31.0.3",
     "mwaction": "^1.0.8",
     "pure-uuid": "^1.8.1",
     "robust-predicates": "^3.0.2",
