--- a/battleworld/package.json
+++ b/battleworld/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@p12/viem": "^1.0.0",
     "@types/crypto-js": "^4.2.1",
     "@types/uuid": "^9.0.7",
     "crypto-js": "^4.2.0",
