--- a/dragon-verse/package.json
+++ b/dragon-verse/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@p12/viem": "^1.0.0",
     "@types/crypto-js": "^4.2.1",
     "@types/node": "^20.4.8",
     "@types/uuid": "^9.0.7",
