chore: git ignore buildSetting

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 **/AutoBackup/**/*
 **/Pictures/**/*
 **/Plugins/**/*
+**/ExternalData/BuildSetting
 #   Config/**/*
 **/Config/UIOutlineData.ini
 #       键位绑定
