--- a/nevergiveup/Config/GameSetting.ini
+++ b/nevergiveup/Config/GameSetting.ini
@@ -14,6 +14,8 @@ bUseTemplatJoystick=False
 bLSMode=false
 bUseAutonomousProxyAuthority=True
 SubstepEnable=False
+bWorldKillZEnabled=False
+WorldKillZ=-1000.000000
 
 [ResolutionSettings]
 bIsFill=True
@@ -25,13 +27,13 @@ SelectedIndex=0
 bHorizontalScreen=True
 
 [EditorVersion]
-Version=v0.31.0.3
+Version=v0.38.0.0
 
 [GraphicsSetting]
 EditorCPULevel=9
 EditorGPULevel=9
-MobileCPULevel=9
-MobileGPULevel=9
+MobileCPULevel=0
+MobileGPULevel=0
 
 [Transform]
 Num_Translate=1
