feat:update editor setting

--- a/pet-simulator/Config/GameSetting.ini
+++ b/pet-simulator/Config/GameSetting.ini
@@ -12,6 +12,12 @@ autoReconnectTime=10
 matchReconnectTime=60
 bUseTemplatJoystick=False
 bLSMode=false
+NavMeshRadius=30
+NavMeshHeight=100
+NavMeshStepHeight=45
+NavMeshStepSlope=45
+bWorldKillZEnabled=False
+WorldKillZ=-1000.000000
 
 [ResolutionSettings]
 bIsFill=True
@@ -23,7 +29,7 @@ SelectedIndex=0
 bHorizontalScreen=True
 
 [EditorVersion]
-Version=v0.31.0.4
+Version=v0.38.0.0
 
 [Transform]
 Num_Translate=1
