--- a/dragon-verse/Config/GameSetting.ini
+++ b/dragon-verse/Config/GameSetting.ini
@@ -14,6 +14,8 @@ bUseTemplatJoystick=False
 bLSMode=False
 bUseAutonomousProxyAuthority=True
 PlayerStyle=
+bWorldKillZEnabled=False
+WorldKillZ=-1000.000000
 
 [ResolutionSettings]
 bIsFill=True
@@ -25,7 +27,7 @@ SelectedIndex=0
 bHorizontalScreen=True
 
 [EditorVersion]
-Version=v0.31.0.4
+Version=v0.38.0.0
 
 [GraphicsSetting]
 EditorCPULevel=9
